# velocirap_public

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
scripts/: animation.py  visualisation.py
velocirap/: helpers.py  plot.py
velocirap/timeseries/: dates.py  load_ts.py  transform.py
velocirap/vdf/: files.py  load.py  process.py
