[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "velocirap"
version = "0.1.0"
description = "IRAP velocity distribution function library"
readme = "README.md"
requires-python = ">=3.12"
license = "BSD-3-Clause"
authors = []
dependencies = [
    "numpy (>=2.2.4,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "speasy",
    "ipython",  
    "dotmap",
    "cdflib (==1.3.3)",
    "cmcrameri",
    "emcee",
    "corner",
    "scikit-learn",
    "imageio",
    "moviepy"
]

[tool.setuptools.packages.find]
where = ["."]
